examples/test/testpolicy11940.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy11940
  namespace: namespace361
spec:
  podSelector:
    matchLabels:
      key13: value43
      key0: value23
      key17: value27
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key18: value7
          key47: value1
      podSelector:
        matchLabels:
          key47: value41
